tests/lustre/typechecking/shouldFail/cast_03.lus

node top(x: bool) returns (y: int8);
let
  y = (int@<8> x);
tel
